boulder/boulder/tests/compile_fail/hir/function_call/arg_count_small.bo
# 2 parameters 
# received 1
# (6:
# (9:

fn callee(a: u32, b: u32) { }

fn caller(a: u32) {
    callee(a)
}